--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "orangehill/iseed": "^3.0",
+        "spatie/laravel-medialibrary": "^9.0.0",
         "spatie/laravel-sluggable": "^2.6",
         "voku/simple_html_dom": "^4.7"
     },
